Remove outdated documentation files: GUIA_ENTRENAMIENTO_DESPLIEGUE.md and PRUEBAS_SISTEMA.md